--- a/aretes/styles/styles.css
+++ b/aretes/styles/styles.css
@@ -30,7 +30,6 @@ body{
     color: #fff;
     font-size: 15px;
     font-weight: 600;
-    /* margin-right: 45px; */
     margin: 25px;
     transition: all 0.3s ease 0s;
 }
@@ -47,6 +46,77 @@ body{
 }
 
 /* Fin de Estilos del Navbar */
+
+/* Estilos del Main */
+
+/* Descripcion de todos los productos */
+.descripcion{
+    width: 100%;
+    text-align: center;
+    padding: 50px 0px;
+}
+.tituloDescripcion{
+    width: fit-content;
+    margin: 0px auto;
+}
+.subtituloDescripcion{
+    width: 60%;
+    margin: 0px auto;
+}
+
+/* Titulo de los productos */
+.infoProducto {
+    text-align: center;
+}
+
+.tituloProducto {
+    margin-left: 3%;
+    display: inline;
+}
+
+.subtituloProducto {
+    display: inline;
+}
+
+/* Contenedor de las tarjetas */
+.seccionProductos{
+    display: flex;
+    justify-content: space-around;
+    margin: 4%;
+}
+/* Estilo de cada tarjeta */
+.tarjeta{
+    width: 25%;
+    height: 376px;
+    text-align: center;
+    background-color: #D9D9D9;
+    border-radius: 51px;
+    position: relative;
+    transition: all 0.3s ease;
+}
+.tarjeta:hover{
+    transform: scale(1.1);
+}
+.imagenTarjeta{
+    padding: 15px 23px 22px 22px;
+    width:100%;
+    height: 55%;
+    object-fit:cover;
+    border-radius: 50px;
+}
+.botonComprar{
+    width: fit-content;
+    padding: 16px 35px;
+    background-color:#0C5562;
+    color: #fff;
+    border-radius: 51px;
+    /* Codigo de ChatGPT para ajustar posicion del boton */
+    position: absolute;
+    bottom: 19px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+/* Fin de estilos del Main */
 
 
 /* Estilos del Footer */
